--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "sync:remote": "cross-env SYNC_DB=TRUE USE_DB=REMOTE node src/sync.js"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "chalk": "^5.3.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
